fixed on default zoomed view

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -24,3 +24,11 @@ a:hover {
 section {
   scroll-margin-top: 80px; /* works with sticky nav */
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
